src/pwCompiler/pWhileParser.java
// Generated from /homes/zz5013/pwhile/src/pWhile.g4 by ANTLR 4.7
package pwCompiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pWhileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL=1, INTEGER=2, MUL=3, DIV=4, MOD=5, PLUS=6, MINUS=7, GT=8, GTE=9, 
		LT=10, LTE=11, EQ=12, NEQ=13, AND=14, OR=15, NOT=16, IF=17, THEN=18, ELSE=19, 
		FI=20, WHILE=21, DO=22, OD=23, CHOOSE=24, ORR=25, RO=26, DECLARE=27, RDASSIGN=28, 
		ASSIGN=29, SEMICOLON=30, COMMA=31, HASH=32, DDOT=33, DOT=34, VAR=35, BEGIN=36, 
		END=37, SKIPP=38, STOP=39, PARA=40, OPEN_PARENTHESES=41, CLOSE_PARENTHESES=42, 
		OPEN_CURLY_BRACKET=43, CLOSE_CURLY_BRACKET=44, OPEN_SQUARE_BRACKET=45, 
		CLOSE_SQUARE_BRACKET=46, IDENT=47, ESCAPEDCHAR=48, WHITESPACE=49, COMMENT=50;
	public static final int
		RULE_binOpP1 = 0, RULE_binOpP2 = 1, RULE_binOpP3 = 2, RULE_binOpP4 = 3, 
		RULE_binOpP5 = 4, RULE_binOpP6 = 5, RULE_unaryOp = 6, RULE_stat = 7, RULE_expr = 8, 
		RULE_pr = 9, RULE_valueRange = 10, RULE_para = 11, RULE_prog = 12;
	public static final String[] ruleNames = {
		"binOpP1", "binOpP2", "binOpP3", "binOpP4", "binOpP5", "binOpP6", "unaryOp", 
		"stat", "expr", "pr", "valueRange", "para", "prog"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'*'", "'/'", "'%'", "'+'", "'-'", "'>'", "'>='", "'<'", 
		"'<='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'if'", "'then'", "'else'", 
		"'fi'", "'while'", "'do'", "'od'", "'choose'", "'or'", "'ro'", "':'", 
		"'?='", "':='", "';'", "','", "'#'", "'..'", "'.'", "'var'", "'begin'", 
		"'end'", "'skip'", "'stop'", "'para'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BOOL", "INTEGER", "MUL", "DIV", "MOD", "PLUS", "MINUS", "GT", "GTE", 
		"LT", "LTE", "EQ", "NEQ", "AND", "OR", "NOT", "IF", "THEN", "ELSE", "FI", 
		"WHILE", "DO", "OD", "CHOOSE", "ORR", "RO", "DECLARE", "RDASSIGN", "ASSIGN", 
		"SEMICOLON", "COMMA", "HASH", "DDOT", "DOT", "VAR", "BEGIN", "END", "SKIPP", 
		"STOP", "PARA", "OPEN_PARENTHESES", "CLOSE_PARENTHESES", "OPEN_CURLY_BRACKET", 
		"CLOSE_CURLY_BRACKET", "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", 
		"IDENT", "ESCAPEDCHAR", "WHITESPACE", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pWhile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pWhileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BinOpP1Context extends ParserRuleContext {
		public TerminalNode MUL() { return getToken(pWhileParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(pWhileParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(pWhileParser.MOD, 0); }
		public BinOpP1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binOpP1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterBinOpP1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitBinOpP1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitBinOpP1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinOpP1Context binOpP1() throws RecognitionException {
		BinOpP1Context _localctx = new BinOpP1Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_binOpP1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MUL) | (1L << DIV) | (1L << MOD))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinOpP2Context extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(pWhileParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(pWhileParser.MINUS, 0); }
		public BinOpP2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binOpP2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterBinOpP2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitBinOpP2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitBinOpP2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinOpP2Context binOpP2() throws RecognitionException {
		BinOpP2Context _localctx = new BinOpP2Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_binOpP2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinOpP3Context extends ParserRuleContext {
		public TerminalNode GT() { return getToken(pWhileParser.GT, 0); }
		public TerminalNode GTE() { return getToken(pWhileParser.GTE, 0); }
		public TerminalNode LT() { return getToken(pWhileParser.LT, 0); }
		public TerminalNode LTE() { return getToken(pWhileParser.LTE, 0); }
		public BinOpP3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binOpP3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterBinOpP3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitBinOpP3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitBinOpP3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinOpP3Context binOpP3() throws RecognitionException {
		BinOpP3Context _localctx = new BinOpP3Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_binOpP3);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << GTE) | (1L << LT) | (1L << LTE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinOpP4Context extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(pWhileParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(pWhileParser.NEQ, 0); }
		public BinOpP4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binOpP4; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterBinOpP4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitBinOpP4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitBinOpP4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinOpP4Context binOpP4() throws RecognitionException {
		BinOpP4Context _localctx = new BinOpP4Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_binOpP4);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_la = _input.LA(1);
			if ( !(_la==EQ || _la==NEQ) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinOpP5Context extends ParserRuleContext {
		public TerminalNode AND() { return getToken(pWhileParser.AND, 0); }
		public BinOpP5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binOpP5; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterBinOpP5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitBinOpP5(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitBinOpP5(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinOpP5Context binOpP5() throws RecognitionException {
		BinOpP5Context _localctx = new BinOpP5Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_binOpP5);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(AND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinOpP6Context extends ParserRuleContext {
		public TerminalNode OR() { return getToken(pWhileParser.OR, 0); }
		public BinOpP6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binOpP6; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterBinOpP6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitBinOpP6(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitBinOpP6(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinOpP6Context binOpP6() throws RecognitionException {
		BinOpP6Context _localctx = new BinOpP6Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_binOpP6);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(OR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryOpContext extends ParserRuleContext {
		public UnaryOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryOp; }
	 
		public UnaryOpContext() { }
		public void copyFrom(UnaryOpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class UnaryOpIntContext extends UnaryOpContext {
		public TerminalNode MINUS() { return getToken(pWhileParser.MINUS, 0); }
		public UnaryOpIntContext(UnaryOpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterUnaryOpInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitUnaryOpInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitUnaryOpInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaryOpBoolContext extends UnaryOpContext {
		public TerminalNode NOT() { return getToken(pWhileParser.NOT, 0); }
		public UnaryOpBoolContext(UnaryOpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterUnaryOpBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitUnaryOpBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitUnaryOpBool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryOpContext unaryOp() throws RecognitionException {
		UnaryOpContext _localctx = new UnaryOpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_unaryOp);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MINUS:
				_localctx = new UnaryOpIntContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				match(MINUS);
				}
				break;
			case NOT:
				_localctx = new UnaryOpBoolContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				match(NOT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StopContext extends StatContext {
		public TerminalNode STOP() { return getToken(pWhileParser.STOP, 0); }
		public StopContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterStop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitStop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitStop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignmentContext extends StatContext {
		public TerminalNode IDENT() { return getToken(pWhileParser.IDENT, 0); }
		public TerminalNode ASSIGN() { return getToken(pWhileParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RandomAssignmentContext extends StatContext {
		public TerminalNode IDENT() { return getToken(pWhileParser.IDENT, 0); }
		public TerminalNode RDASSIGN() { return getToken(pWhileParser.RDASSIGN, 0); }
		public ValueRangeContext valueRange() {
			return getRuleContext(ValueRangeContext.class,0);
		}
		public RandomAssignmentContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterRandomAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitRandomAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitRandomAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatlistContext extends StatContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(pWhileParser.SEMICOLON, 0); }
		public StatlistContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterStatlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitStatlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitStatlist(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareVariableContext extends StatContext {
		public TerminalNode IDENT() { return getToken(pWhileParser.IDENT, 0); }
		public TerminalNode DECLARE() { return getToken(pWhileParser.DECLARE, 0); }
		public ValueRangeContext valueRange() {
			return getRuleContext(ValueRangeContext.class,0);
		}
		public DeclareVariableContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterDeclareVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitDeclareVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitDeclareVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SkipContext extends StatContext {
		public TerminalNode SKIPP() { return getToken(pWhileParser.SKIPP, 0); }
		public SkipContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterSkip(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitSkip(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitSkip(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ChooseContext extends StatContext {
		public TerminalNode CHOOSE() { return getToken(pWhileParser.CHOOSE, 0); }
		public List<PrContext> pr() {
			return getRuleContexts(PrContext.class);
		}
		public PrContext pr(int i) {
			return getRuleContext(PrContext.class,i);
		}
		public List<TerminalNode> DECLARE() { return getTokens(pWhileParser.DECLARE); }
		public TerminalNode DECLARE(int i) {
			return getToken(pWhileParser.DECLARE, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode RO() { return getToken(pWhileParser.RO, 0); }
		public List<TerminalNode> ORR() { return getTokens(pWhileParser.ORR); }
		public TerminalNode ORR(int i) {
			return getToken(pWhileParser.ORR, i);
		}
		public ChooseContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterChoose(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitChoose(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitChoose(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileContext extends StatContext {
		public TerminalNode WHILE() { return getToken(pWhileParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DO() { return getToken(pWhileParser.DO, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode OD() { return getToken(pWhileParser.OD, 0); }
		public List<TerminalNode> OPEN_SQUARE_BRACKET() { return getTokens(pWhileParser.OPEN_SQUARE_BRACKET); }
		public TerminalNode OPEN_SQUARE_BRACKET(int i) {
			return getToken(pWhileParser.OPEN_SQUARE_BRACKET, i);
		}
		public TerminalNode INTEGER() { return getToken(pWhileParser.INTEGER, 0); }
		public List<TerminalNode> CLOSE_SQUARE_BRACKET() { return getTokens(pWhileParser.CLOSE_SQUARE_BRACKET); }
		public TerminalNode CLOSE_SQUARE_BRACKET(int i) {
			return getToken(pWhileParser.CLOSE_SQUARE_BRACKET, i);
		}
		public TerminalNode LT() { return getToken(pWhileParser.LT, 0); }
		public PrContext pr() {
			return getRuleContext(PrContext.class,0);
		}
		public WhileContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfContext extends StatContext {
		public TerminalNode IF() { return getToken(pWhileParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode THEN() { return getToken(pWhileParser.THEN, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(pWhileParser.ELSE, 0); }
		public TerminalNode FI() { return getToken(pWhileParser.FI, 0); }
		public IfContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pWhileListener ) ((pWhileListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pWhileVisitor ) return ((pWhileVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		return stat(0);
	}

	private StatContext stat(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StatContext _localctx = new StatContext(_ctx, _parentState);
		StatContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_stat, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new SkipContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
